ISS-11-17-45 Initial Fix  Main Elements Alignment

--- a/styles/sign-up.css
+++ b/styles/sign-up.css
@@ -66,7 +66,7 @@
 /* Media Queries */
 @media screen and (min-width: 992px) {
   .sign-up-hero[data-module=HeroModule] .HeroCalloutCntr:after {
-    display: block;
+    /* display: block; */
     /* bottom: 95px; */
     z-index: 1;
   }
@@ -76,6 +76,7 @@
   .hpp-dtc-m-hero.sign-up-hero .content {
     /* margin-top: 30rem; */
     margin-bottom: 4rem;
+    padding: 0 15px;
   }
 
   /* .hpp-dtc-m-hero.sign-up-hero .content {
@@ -85,7 +86,14 @@
   .hpp-dtc-m-hero.internal-hero.sign-up-hero .content .pre-title {
     margin-top: 6rem;
     position: relative;
-    left: -7rem;
+    left: 0;
+  }
+
+  .hpp-dtc-m-hpp-patient-support-form {
+    margin: 0 auto;
+    margin-top: 25px;
+    max-width: 1100px;
+    padding: 0;
   }
 
 }
@@ -132,14 +140,14 @@
   }
 
   .hpp-dtc-m-hero.internal-hero.sign-up-hero .content .pre-title {
-    left: -8.5%;
+    left: 0;
   }
 }
 
 @media screen and (min-width: 1250px) and (max-width: 1365px) {
-  .hpp-dtc-m-hero.internal-hero.sign-up-hero .content .pre-title {
+  /* .hpp-dtc-m-hero.internal-hero.sign-up-hero .content .pre-title {
     left: -9% !important;
-  }
+  } */
 }
 
 @media screen and (min-width: 992px) and (max-width: 1024px) {
@@ -155,15 +163,15 @@
 }
 
 @media (min-width: 1600px) {
-  .hpp-dtc-m-hero.internal-hero.sign-up-hero .content .pre-title {
+  /* .hpp-dtc-m-hero.internal-hero.sign-up-hero .content .pre-title {
     left: -15%;
-  }
+  } */
 }
 
 @media (min-width: 2000px) {
-  .hpp-dtc-m-hero.internal-hero.sign-up-hero .content .pre-title {
+  /* .hpp-dtc-m-hero.internal-hero.sign-up-hero .content .pre-title {
     left: -25%;
-  }
+  } */
 }
 
 @media screen and (min-width: 992px) and (max-width: 1200px) {
